[gd_scene load_steps=2 format=3 uid="uid://c2l0udrb40w16"]

[ext_resource type="Script" path="res://scripts/open_menu.gd" id="1_jkes3"]

[node name="open_menu" type="CanvasLayer"]
script = ExtResource("1_jkes3")

[node name="open_panel" type="Panel" parent="."]
offset_left = 129.0
offset_top = 101.0
offset_right = 970.0
offset_bottom = 441.0

[node name="open_button" type="Button" parent="open_panel"]
layout_mode = 0
offset_left = 75.0
offset_top = 55.0
offset_right = 275.0
offset_bottom = 100.0
text = "Open Repository"

[node name="clone_button" type="Button" parent="open_panel"]
layout_mode = 0
offset_left = 75.0
offset_top = 150.0
offset_right = 275.0
offset_bottom = 195.0
text = "Clone_Repository"

[node name="clone_panel" type="Panel" parent="open_panel"]
visible = false
layout_mode = 0
offset_left = 315.0
offset_top = 145.0
offset_right = 715.0
offset_bottom = 266.0

[node name="Label" type="Label" parent="open_panel/clone_panel"]
layout_mode = 0
offset_left = 26.0
offset_top = 22.0
offset_right = 110.0
offset_bottom = 48.0
text = "Clone URL:"

[node name="Label2" type="Label" parent="open_panel/clone_panel"]
layout_mode = 0
offset_left = 29.0
offset_top = 69.0
offset_right = 96.0
offset_bottom = 95.0
text = "Location:"

[node name="repository_url" type="TextEdit" parent="open_panel/clone_panel"]
layout_mode = 0
offset_left = 116.0
offset_top = 16.0
offset_right = 366.0
offset_bottom = 61.0

[node name="browse_button" type="Button" parent="open_panel/clone_panel"]
layout_mode = 0
offset_left = 204.0
offset_top = 70.0
offset_right = 270.0
offset_bottom = 101.0
text = "Browse"

[node name="message_panel" type="Panel" parent="open_panel"]
visible = false
layout_mode = 0
offset_left = 229.0
offset_top = 52.0
offset_right = 628.0
offset_bottom = 254.0

[node name="message" type="TextEdit" parent="open_panel/message_panel"]
layout_mode = 0
offset_left = 47.0
offset_top = 11.0
offset_right = 347.0
offset_bottom = 151.0
editable = false
wrap_mode = 1

[node name="message_button" type="Button" parent="open_panel/message_panel"]
layout_mode = 0
offset_left = 276.0
offset_top = 157.0
offset_right = 326.0
offset_bottom = 188.0
text = "Close"
